Resolve people by SUNet ID
Fixes #39
